--- a/styles.css
+++ b/styles.css
@@ -48,6 +48,7 @@ body {
   font-family: var(--body-font);
   font-size: var(--normal-font-size);
   color: var(--second-color);
+  background-color: whitesmoke
 }
 
 h1, h2, p {
